add ontology description as a got graph visualization
