# fuse-service/src/main/java/com/yangdb/fuse/services/appRegistrars/PageControllerRegistrar.java
@@ -9,9 +9,9 @@ package com.yangdb.fuse.services.appRegistrars;
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -42,13 +42,27 @@ package com.yangdb.fuse.services.appRegistrars;
 
 import com.yangdb.fuse.dispatcher.urlSupplier.AppUrlSupplier;
 import com.yangdb.fuse.logging.Route;
+import com.yangdb.fuse.model.execution.plan.PlanWithCost;
+import com.yangdb.fuse.model.execution.plan.composite.Plan;
+import com.yangdb.fuse.model.execution.plan.costs.PlanDetailedCost;
+import com.yangdb.fuse.model.execution.plan.descriptors.PlanWithCostDescriptor;
 import com.yangdb.fuse.model.resourceInfo.PageResourceInfo;
+import com.yangdb.fuse.model.results.AssignmentDescriptor;
+import com.yangdb.fuse.model.results.AssignmentsQueryResult;
 import com.yangdb.fuse.model.transport.ContentResponse;
 import com.yangdb.fuse.model.transport.CreatePageRequest;
 import com.yangdb.fuse.model.transport.cursor.CreateGraphCursorRequest;
+import com.yangdb.fuse.rendering.SVGGraphRenderer;
 import com.yangdb.fuse.services.controllers.PageController;
 import org.jooby.Jooby;
+import org.jooby.Request;
+import org.jooby.Response;
 import org.jooby.Results;
+
+import java.io.File;
+
+import static org.jooby.Status.NOT_FOUND;
+import static org.jooby.Status.OK;
 
 public class PageControllerRegistrar extends AppControllerRegistrarBase<PageController> {
     //region Constructors
@@ -96,6 +110,11 @@ public class PageControllerRegistrar extends AppControllerRegistrarBase<PageCont
                 });
 
         /** get page data by id */
+        app.get(appUrlSupplier.resourceUrl(":queryId", ":cursorId", ":pageId") + "/visualize",
+                (req,resp) -> API.dataView(app,req,resp,this));
+
+
+
         app.get(appUrlSupplier.resourceUrl(":queryId", ":cursorId", ":pageId") + "/data",
                 req -> {
                     Route.of("getPageData").write();
@@ -131,5 +150,33 @@ public class PageControllerRegistrar extends AppControllerRegistrarBase<PageCont
                     return Results.with(response, response.status());
                 });
     }
-    //endregion
+
+    public static class API {
+        /**
+         * print an SVG representation of the data
+         * @param app
+         * @param req
+         * @param resp
+         * @param controller
+         * @return
+         * @throws Throwable
+         */
+        public static Object dataView(Jooby app, Request req, Response resp, PageControllerRegistrar controller) throws Throwable {
+
+            Route.of("getPageData").write();
+
+            String queryId = req.param("queryId").value();
+            ContentResponse response = controller.getController(app).getData(queryId, req.param("cursorId").value(), req.param("pageId").value());
+            AssignmentsQueryResult data = (AssignmentsQueryResult) response.getData();
+            String dotGraph = AssignmentDescriptor.printGraph(data.getAssignments());
+            File file = SVGGraphRenderer.render(queryId, dotGraph);
+            ContentResponse<File> compose = ContentResponse.Builder.<File>builder(OK, NOT_FOUND)
+                    .data(file)
+                    .compose();
+            return RegistrarsUtils.withImg(req,resp,compose);
+        }
+
+
+    }
+        //endregion
 }
