# fuse-service/src/main/java/com/yangdb/fuse/services/appRegistrars/QueryControllerRegistrar.java
@@ -58,11 +58,14 @@ import com.yangdb.fuse.model.resourceInfo.QueryResourceInfo;
 import com.yangdb.fuse.model.transport.*;
 import com.yangdb.fuse.model.transport.cursor.LogicalGraphCursorRequest;
 import com.yangdb.fuse.model.validation.ValidationResult;
+import com.yangdb.fuse.rendering.SVGGraphRenderer;
 import com.yangdb.fuse.services.controllers.QueryController;
 import org.apache.tinkerpop.gremlin.process.traversal.dsl.graph.GraphTraversal;
+import org.jooby.Response;
 import org.jooby.*;
 import org.jooby.apitool.ApiTool;
 
+import java.io.File;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
@@ -158,13 +161,19 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
             ContentResponse response = this.getController(app).getV1(req.param("queryId").value());
             return Results.with(response, response.status());
         });
+
         /** get the query v1 print*/
-        app.get(appUrlSupplier.resourceUrl(":queryId") + "/v1/print", req -> API.queryPrint(app, req, this));
+        app.get(appUrlSupplier.resourceUrl(":queryId") + "/print",
+                req -> API.printQuery(app, req, this));
+
+        /** get the query v1 print*/
+        app.get(appUrlSupplier.resourceUrl(":queryId") + "/visualize",
+                (req,resp) -> API.queryView(app, req,resp, this));
 
 
         /** view the asg query with d3 html*/
-        app.get(appUrlSupplier.resourceUrl(":queryId") + "/asg/view",
-                req -> Results.redirect("/public/assets/AsgTreeViewer.html?q=" + req.param("queryId").value()));
+        app.get(appUrlSupplier.resourceUrl(":queryId") + "/asg/visualize",
+                (req,resp) -> API.asgView(app, req,resp, this));
 
 
         /** get the asg query */
@@ -186,7 +195,7 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
 
         /** get the asg query print*/
         app.get(appUrlSupplier.resourceUrl(":queryId") + "/asg/print",
-                req -> API.print(app, req, this));
+                req -> API.printAsg(app, req, this));
 
         /** get the query plan execution */
         app.get(appUrlSupplier.resourceUrl(":queryId") + "/plan", req -> {
@@ -205,11 +214,9 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
         app.get(appUrlSupplier.resourceUrl(":queryId") + "/plan/graph",
                 req -> API.planGraph(app, req, this));
 
-        app.get(appUrlSupplier.resourceUrl(":queryId") + "/plan/view",
-                req -> Results.redirect("/public/assets/PlanTreeViewer.html?q=" + req.param("queryId").value()));
-
-        app.get(appUrlSupplier.resourceUrl(":queryId") + "/plan/sankey",
-                req -> Results.redirect("/public/assets/PlanSankeyViewer.html?q=" + req.param("queryId").value()));
+        /** get the query verbose plan */
+        app.get(appUrlSupplier.resourceUrl(":queryId") + "/plan/visualize",
+                (req,resp) -> API.planView(app, req,resp, this));
 
         //swagger
         app.use(new ApiTool()
@@ -540,7 +547,7 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
 
         }
 
-        public static Result print(Jooby app, Request req, QueryControllerRegistrar registrar) {
+        public static Result printAsg(Jooby app, Request req, QueryControllerRegistrar registrar) {
             ContentResponse<AsgQuery> response = registrar.getController(app).getAsg(req.param("queryId").value());
             String print = AsgQueryDescriptor.print(response.getData());
             ContentResponse<String> compose = ContentResponse.Builder.<String>builder(OK, NOT_FOUND)
@@ -569,7 +576,7 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
             return Results.with(compose, compose.status());
         }
 
-        public static Result queryPrint(Jooby app, Request req, QueryControllerRegistrar registrar) {
+        public static Result printQuery(Jooby app, Request req, QueryControllerRegistrar registrar) {
             ContentResponse<Query> response = registrar.getController(app).getV1(req.param("queryId").value());
             String print = QueryDescriptor.print(response.getData());
             ContentResponse<String> compose = ContentResponse.Builder.<String>builder(OK, NOT_FOUND)
@@ -578,5 +585,66 @@ public class QueryControllerRegistrar extends AppControllerRegistrarBase<QueryCo
             return Results.with(compose, compose.status());
 
         }
+
+        /**
+         * print an SVG representation of the V1 query
+         * @param app
+         * @param req
+         * @param resp
+         * @param registrar
+         * @return
+         * @throws Throwable
+         */
+        public static Object queryView(Jooby app, Request req, Response resp, QueryControllerRegistrar registrar) throws Throwable {
+            String queryId = req.param("queryId").value();
+            ContentResponse<Query> response = registrar.getController(app).getV1(queryId);
+            String dotGraph = QueryDescriptor.printGraph(response.getData());
+            File file = SVGGraphRenderer.render(queryId, dotGraph);
+            ContentResponse<File> compose = ContentResponse.Builder.<File>builder(OK, NOT_FOUND)
+                    .data(file)
+                    .compose();
+            return RegistrarsUtils.withImg(req,resp,compose);
+        }
+
+        /**
+          * print an SVG representation of the ASG query
+         * @param app
+         * @param req
+         * @param resp
+         * @param registrar
+         * @return
+         * @throws Throwable
+         */
+        public static Object asgView(Jooby app, Request req, Response resp, QueryControllerRegistrar registrar) throws Throwable {
+            String queryId = req.param("queryId").value();
+            ContentResponse<AsgQuery> response = registrar.getController(app).getAsg(queryId);
+            String dotGraph = AsgQueryDescriptor.printGraph(response.getData());
+            File file = SVGGraphRenderer.render(queryId, dotGraph);
+            ContentResponse<File> compose = ContentResponse.Builder.<File>builder(OK, NOT_FOUND)
+                    .data(file)
+                    .compose();
+            return RegistrarsUtils.withImg(req,resp,compose);
+        }
+
+        /**
+         * print an SVG representation of the execution plan
+         * @param app
+         * @param req
+         * @param resp
+         * @param registrar
+         * @return
+         * @throws Throwable
+         */
+        public static Object planView(Jooby app, Request req, Response resp, QueryControllerRegistrar registrar) throws Throwable {
+            String queryId = req.param("queryId").value();
+            ContentResponse<PlanWithCost<Plan, PlanDetailedCost>> response = registrar.getController(app).explain(req.param("queryId").value());
+            String dotGraph = PlanWithCostDescriptor.printGraph(response.getData());
+            File file = SVGGraphRenderer.render(queryId, dotGraph);
+            ContentResponse<File> compose = ContentResponse.Builder.<File>builder(OK, NOT_FOUND)
+                    .data(file)
+                    .compose();
+            return RegistrarsUtils.withImg(req,resp,compose);
+        }
+
     }
 }
